--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
     </div>
   </div>
   <div id="footer">
-    <p>PPatel - Data Analytics Bootcamp, Tec de Monterrey 2020 (Monterrey, Mexico)
-      <br/>
-    Trilogy Education Services © 2019. All Rights Reserved.</p>
+    <p>PPatel 2020 (Monterrey, Mexico)</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
