analysis update - html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
           <hr>
           <h2>Correlation Between Income and Obesity</h2>
           <p>Income levels seem pretty well correlated with obesity levels in each state. Overall, states with a lower average income level among its population presented higher obesity levels.  One could speculate that this could indicated that lower-cost food items are contribute to nutritional deficiency, resulting in higher probability of obesity rates in populations with lower incomes. It could also support the idea of “food desserts”, where lower-income areas may have lower availability of high-quality foods or more food options, thus contributing to nutritional deficiencies like obesity.  </p>
+          <hr>
+          <h2>Correlation Between Poverty Rate and Obesity</h2>
+          <p>Poverty rate also appears to be pretty well correlated with obesity levels in each state.  Generally, states with higher poverty rates also presented higher obeisty levels. As noted above, this may be an indication of lower nutritional content in the foods that are more affordable or available (or both) to families who live below the poverty line.</p>
+          <hr>
+          <h2>Correlation Between Obesity and Healthcare Coverage</h2>
+          <p>There is a less strong correlation between obesity and healthcare coverage.  However, there is still a generally positive correlation between these two factors, indicating that the higher the percentage of the population that lacks healthcare coverage (used as a proxy for lack of access to health services), the higher the obesity rate.</p>
         </div>
       </div>
     </div>
